# aoc2021

./: .gitignore  check.sh  module.py  open.sh
base/: .gitignore  setup.py
base/aoc/: input.py  partselector.py
cpp/: CMakeLists.txt  challenge.cpp  challenge.h  challenge01.cpp  challenge02.cpp  challenge05.cpp  challenge05b.cpp  main.cpp
day01/: module.py
day02/: module.py
day03/: module.py
day04/: module.py
day05/: module.py
day06/: module.py
day07/: module.py
day08/: module.py
day09/: module.py
day10/: module.py
day10/data/: sample.txt
day11/: module.py  test.html
day12/: module.py
day13/: module.py
day14/: module.py
day15/: module.py
day16/: module.py
day17/: module.py
day18/: module.py
day18/data/: sample.txt
day21/: module.py
day22/: module.py  test.py
